--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -25,11 +25,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/Waypoints.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.bukkit-0.0.1-SNAPSHOT.jar=lib/bukkit-0.0.1-SNAPSHOT.jar
+file.reference.craftbukkit-0.0.1-SNAPSHOT.jar=C:\\Users\\Andrew\\Desktop\\.craftbukkit\\craftbukkit-0.0.1-SNAPSHOT.jar
+file.reference.Permissions.jar=C:\\Users\\Andrew\\Desktop\\.craftbukkit\\plugins\\Permissions.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.bukkit-0.0.1-SNAPSHOT.jar}
+    ${file.reference.craftbukkit-0.0.1-SNAPSHOT.jar}:\
+    ${file.reference.Permissions.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
