--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
-annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Waypoints
+application.vendor=Andrew
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -24,14 +24,15 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/Waypoints.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.craftbukkit-0.0.1-SNAPSHOT.jar=C:\\Users\\Andrew\\Desktop\\.craftbukkit\\craftbukkit-0.0.1-SNAPSHOT.jar
-file.reference.Permissions.jar=C:\\Users\\Andrew\\Desktop\\.craftbukkit\\plugins\\Permissions.jar
+file.reference.Permissions.jar=lib/Permissions.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.craftbukkit-0.0.1-SNAPSHOT.jar}:\
-    ${file.reference.Permissions.jar}
+    ${file.reference.Permissions.jar}:\
+    ${file.reference.craftbukkit-0.0.1-SNAPSHOT.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
