Added the ability to list waypoints by world using:
/waypoints list world "World name"

if no arguments after list are offered it will list all waypoints still.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -26,13 +26,13 @@ dist.jar=${dist.dir}/Waypoints.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.craftbukkit-0.0.1-SNAPSHOT.jar=C:\\Users\\Andrew\\Desktop\\.craftbukkit\\craftbukkit-0.0.1-SNAPSHOT.jar
+file.reference.craftbukkit-0.0.1-SNAPSHOT.jar-1=lib\\craftbukkit-0.0.1-SNAPSHOT.jar
 file.reference.Permissions.jar=lib/Permissions.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.Permissions.jar}:\
-    ${file.reference.craftbukkit-0.0.1-SNAPSHOT.jar}
+    ${file.reference.craftbukkit-0.0.1-SNAPSHOT.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
