--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -26,13 +26,13 @@ dist.jar=${dist.dir}/Waypoints.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.craftbukkit-1.0.1-R1.jar=lib\\craftbukkit-1.0.1-R1.jar
+file.reference.bukkit-1.2.3-R0.3-20120322.072117-21.jar=lib/bukkit-1.2.3-R0.3-20120322.072117-21.jar
 file.reference.Permissions.jar=lib/Permissions.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.Permissions.jar}:\
-    ${file.reference.craftbukkit-1.0.1-R1.jar}
+    ${file.reference.bukkit-1.2.3-R0.3-20120322.072117-21.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -61,6 +61,7 @@ javadoc.windowtitle=
 main.class=craftbukkitdev.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
