--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,12 +27,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.bukkit-1.2.3-R0.3-20120322.072117-21.jar=lib/bukkit-1.2.3-R0.3-20120322.072117-21.jar
+file.reference.Multiverse-Core.jar=lib/Multiverse-Core.jar
 file.reference.Permissions.jar=lib/Permissions.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.Permissions.jar}:\
-    ${file.reference.bukkit-1.2.3-R0.3-20120322.072117-21.jar}
+    ${file.reference.bukkit-1.2.3-R0.3-20120322.072117-21.jar}:\
+    ${file.reference.Multiverse-Core.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
