--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Andrew\\.netbeans\\7.0\\build.properties
+user.properties.file=C:\\Users\\thoward.SHIELDLANDS\\.netbeans\\7.1.2\\build.properties
