Update to new Bukkit Build
Updated a newer Bukkit build to verify working condition
Changed to a new version of Netbeans

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,7 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
+file.reference.bukkit-1.2.3-R0.3-20120322.072117-21.jar=C:\\Users\\Andrew\\Documents\\GitHub\\Waypoints\\lib\\bukkit-1.5.2-R1.1-20130701.165003-5.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Andrew\\.netbeans\\7.1.2\\build.properties
+user.properties.file=C:\\Users\\Andrew\\AppData\\Roaming\\NetBeans\\7.3.1\\build.properties
