--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,12 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.desc=A Minecraft mod to enable faster travel.
+application.homepage=www.github.com/Sessional
 application.title=Waypoints
-application.vendor=Andrew
+application.vendor=Sessional
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,20 +29,22 @@ dist.jar=${dist.dir}/Waypoints.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.bukkit-1.2.3-R0.3-20120322.072117-21.jar=lib/bukkit-1.2.3-R0.3-20120322.072117-21.jar
+file.reference.bukkit-1.6.1-R0.1-20130702.022910-1.jar=lib\\bukkit-1.6.1-R0.1-20130702.022910-1.jar
 file.reference.dynmap.jar=lib\\dynmap.jar
 file.reference.Multiverse-Core.jar=lib/Multiverse-Core.jar
 file.reference.Permissions.jar=lib/Permissions.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.Permissions.jar}:\
-    ${file.reference.bukkit-1.2.3-R0.3-20120322.072117-21.jar}:\
     ${file.reference.Multiverse-Core.jar}:\
-    ${file.reference.dynmap.jar}
+    ${file.reference.dynmap.jar}:\
+    ${file.reference.bukkit-1.6.1-R0.1-20130702.022910-1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
-javac.deprecation=false
+javac.deprecation=true
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.5
@@ -62,10 +67,19 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=craftbukkitdev.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
-mkdist.disabled=false
+mkdist.disabled=true
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
