Update to newer version
Added support for console commands.

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,7 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
+file.reference.bukkit-1.6.1-R0.1-20130702.022910-1.jar=C:\\Users\\Andrew\\Documents\\GitHub\\Waypoints\\lib\\bukkit-1.6.2-R0.1-20130710.175601-3.jar
 javac.debug=true
 javadoc.preview=true
 user.properties.file=C:\\Users\\Andrew\\AppData\\Roaming\\NetBeans\\7.3.1\\build.properties
